--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "node-flask",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "flask.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2016-node5": "^1.1.2",
+    "babel-register": "^6.7.2",
+    "koa": "^2.0.0",
+    "koa-route": "^3.1.0",
+    "lodash": "^4.11.1",
+    "require-dir": "^0.3.0"
+  }
 }
