--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
   "name": "node-flask",
-  "version": "1.0.0",
-  "description": "",
-  "main": "flask.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "description": "Microserver for nodejs based based on python flask.",
+  "version": "1.3.0",
+  "author": "Connor McCutcheon",
+  "bugs": "github.com/ccutch/node-flask/issues",
   "dependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2016-node5": "^1.1.2",
-    "babel-register": "^6.7.2",
     "koa": "^2.0.0",
     "koa-route": "^3.1.0",
     "lodash": "^4.11.1",
     "require-dir": "^0.3.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2016-node5": "^1.1.2",
+    "babel-cli": "^6.7.7"
+  },
+  "homepage": "ccutch.github.io/node-flask",
+  "keywords": [
+    "decorators",
+    "es2016",
+    "koa",
+    "router",
+    "server"
+  ],
+  "license": "MIT",
+  "main": "dist/flask.js",
+  "repository": "github.com/ccutch/node-flask",
+  "scripts": {
+    "example": "babel-node example/server",
+    "build": "babel lib --out-dir dist",
+    "prepublish": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
