--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "require-dir": "^0.3.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.7.7",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2016-node5": "^1.1.2",
-    "babel-cli": "^6.7.7"
+    "babel-register": "^6.7.2",
+    "mocha": "^2.4.5"
   },
   "homepage": "ccutch.github.io/node-flask",
   "keywords": [
@@ -30,6 +32,6 @@
     "example": "babel-node example/server",
     "build": "babel lib --out-dir dist",
     "prepublish": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register tests/*"
   }
 }
