--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-flask",
   "description": "Microserver for nodejs based based on python flask.",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "author": "Connor McCutcheon",
   "bugs": "github.com/ccutch/node-flask/issues",
   "dependencies": {
@@ -27,7 +27,10 @@
   ],
   "license": "MIT",
   "main": "dist/flask.js",
-  "repository": "github.com/ccutch/node-flask",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ccutch/node-flask.git"
+  },
   "scripts": {
     "example": "babel-node example/server",
     "build": "babel lib --out-dir dist",
