--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-flask",
   "description": "Microserver for nodejs based based on python flask.",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "author": "Connor McCutcheon",
   "bugs": "github.com/ccutch/node-flask/issues",
   "dependencies": {
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2016-node5": "^1.1.2",
     "babel-register": "^6.7.2",
@@ -36,5 +37,8 @@
     "build": "babel lib --out-dir dist",
     "prepublish": "npm run build",
     "test": "mocha --compilers js:babel-register tests/*"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
